--- a/5_chain.ipynb
+++ b/5_chain.ipynb
@@ -12,16 +12,7 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/beapen/venv/genai/lib/python3.11/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Import the necessary libraries\n",
     "from langchain_google_genai import GoogleGenerativeAI\n",
@@ -194,8 +185,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The provided case summary describes a male child with sudden onset paralysis and a history of headaches.  However, crucial information is missing to determine the cause.  The location and extent of the paralysis, the characteristics of the headaches, the temporal relationship between the headaches and paralysis, past medical history, family history, physical examination findings, and results of investigations are all unspecified.  Therefore, a diagnosis and management plan cannot be formulated without this missing information.  The differential diagnosis includes a wide range of possibilities, including stroke, demyelinating diseases, Guillain-Barré syndrome, transverse myelitis, intracranial hemorrhage, brain tumor, and infections.  Further investigation is absolutely necessary.\n",
-      "\n"
+      "The case summary describes a male child (age unspecified) who presented with acute onset paralysis and a history of headaches.  The location and extent of the paralysis, as well as the characteristics of the headaches, are unknown.  No medical history, physical examination findings, or investigations are documented.  Therefore, a definitive diagnosis cannot be made.  The differential diagnosis is broad and includes stroke, Guillain-Barré syndrome, transverse myelitis, brain tumor or abscess, multiple sclerosis, infectious causes (encephalitis, meningitis), and myasthenia gravis.  Further information, including a complete medical history, detailed physical examination, and results of investigations (blood tests, CSF analysis, brain imaging, EMG, NCS), is crucial for proper assessment and management.  The outcome and treatment are also currently unknown.\n"
      ]
     }
    ],
@@ -207,7 +197,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "genai",
+   "display_name": "py311",
    "language": "python",
    "name": "python3"
   },
@@ -221,7 +211,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.9"
+   "version": "3.11.0"
   }
  },
  "nbformat": 4,
