--- a/7_retriever.ipynb
+++ b/7_retriever.ipynb
@@ -10,18 +10,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/beapen/venv/genai/lib/python3.11/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Import the necessary libraries\n",
     "from langchain_google_genai import GoogleGenerativeAI\n",
@@ -41,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -69,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -92,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -121,19 +112,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Based on the provided text, ataxia telangiectasia is relevant in two ways:\n",
+      "Too Many Requests, waiting for 0.20 seconds...\n",
+      "Based on the provided text, Ataxia Telangiectasia (AT) is:\n",
       "\n",
-      "1.  **VE-822, an ataxia-telangiectasia and RAD3-related inhibitor,** is used in combination with FOLFIRINOX to treat pancreatic ductal adenocarcinoma (PDAC) by targeting DNA damage repair.\n",
-      "\n",
-      "2.  The study on metformin response in T2DM patients investigated the role of genetic variants in  **ataxia telangiectasia mutated (ATM)** gene, although no significant association was found.  A separate study investigated radiation-induced ATM nucleo-shuttling (RIANS) in Marfan syndrome fibroblasts, showing impaired recognition of DNA double-strand breaks due to diminished RIANS.\n",
-      "\n"
+      "1.  A neurocutaneous syndrome affecting the skin, eyes, and central and peripheral nervous systems.\n",
+      "2.  Associated with an inactivating R2034Ter mutation in the Ataxia telangiectasia serine/threonine kinase gene (ATM), which is part of the homologous DNA damage repair pathway.  ATM is a member of the BRCA pathway.\n",
+      "3.  In one case study, an ATM mutation in a pancreatic cancer patient showed a sustained clinical response to Olaparib maintenance therapy.  This suggests that ATM might be a druggable target in pancreatic cancer.\n",
+      "4.  In a sepsis study, the ATM protein was investigated as part of the DNA damage response pathway.  Inhibition of ATM with KU60019 alleviated myocardial damage in a murine sepsis model.\n"
      ]
     }
    ],
@@ -156,7 +148,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "genai",
+   "display_name": "py311",
    "language": "python",
    "name": "python3"
   },
@@ -170,7 +162,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.9"
+   "version": "3.11.0"
   }
  },
  "nbformat": 4,
