--- a/8_agent.ipynb
+++ b/8_agent.ipynb
@@ -10,18 +10,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/beapen/venv/genai/lib/python3.11/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Import the necessary libraries\n",
     "import os\n",
@@ -45,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -97,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -128,14 +119,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/home/beapen/venv/genai/lib/python3.11/site-packages/langsmith/client.py:354: LangSmithMissingAPIKeyWarning: API key must be provided when using hosted LangSmith API\n",
+      "/opt/homebrew/Caskroom/miniconda/base/envs/py311/lib/python3.11/site-packages/langsmith/client.py:241: LangSmithMissingAPIKeyWarning: API key must be provided when using hosted LangSmith API\n",
       "  warnings.warn(\n"
      ]
     }
@@ -163,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -174,9 +165,9 @@
       "\n",
       "\u001b[1m> Entering new AgentExecutor chain...\u001b[0m\n",
       "\u001b[32;1m\u001b[1;3mQuestion: Calculate the BMI of a person with height 180 cm and weight 70 kg.\n",
-      "Thought: I need to use the bmi function to calculate the BMI.  The input should be the height and weight.\n",
+      "Thought: I need to calculate the BMI using the given height and weight.  I can use the `bmi` function for this.\n",
       "Action: bmi\n",
-      "Action Input: height:180cm,weight:70kg\u001b[0m\u001b[36;1m\u001b[1;3mAnswer: The BMI of a person with height 180 cm and weight 70 kg is 21.60\u001b[0m\u001b[32;1m\u001b[1;3m\u001b[0m\n",
+      "Action Input: \"height: 180 cm, weight: 70 kg\"\u001b[0m\u001b[36;1m\u001b[1;3mAnswer: The BMI of a person with height 180 cm and weight 70 kg is 21.60\u001b[0m\u001b[32;1m\u001b[1;3m\u001b[0m\n",
       "\n",
       "\u001b[1m> Finished chain.\u001b[0m\n",
       "{'input': 'Calculate the BMI of a person with height 180 cm and weight 70 kg.', 'output': 'Agent stopped due to iteration limit or time limit.'}\n"
@@ -194,7 +185,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "genai",
+   "display_name": "py311",
    "language": "python",
    "name": "python3"
   },
@@ -208,7 +199,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.9"
+   "version": "3.11.0"
   }
  },
  "nbformat": 4,
