Update model versions and installation commands in notebooks for Google Gemini API and local LLM

--- a/1_api.ipynb
+++ b/1_api.ipynb
@@ -24,13 +24,22 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#!pip install langchain langchain-google-genai\n",
+    "!pip install langchain langchain-google-genai"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "\n",
     "from langchain_google_genai import ChatGoogleGenerativeAI\n",
     "\n",
     "llm = ChatGoogleGenerativeAI(\n",
-    "    model=\"gemini-1.5-pro\",\n",
-    "    #google_api_key=\"Your API Key\"\n",
+    "    model=\"gemini-2.5-flash\",\n",
+    "    # google_api_key=\"Your API Key\"\n",
     ")\n",
     "message = llm.invoke(\"Who is Bell Eapen\")\n",
     "print(message.content)"
@@ -39,7 +48,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2",
+   "id": "3",
    "metadata": {},
    "outputs": [],
    "source": [
