--- a/3_few_shot.ipynb
+++ b/3_few_shot.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "6e115b42",
+   "id": "0",
    "metadata": {},
    "source": [
     "# Few shot learning"
@@ -10,46 +10,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "91b1e94c",
+   "execution_count": null,
+   "id": "1",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Bell Eapen is an Indian entrepreneur and business executive. He is the co-founder and CEO of Meesho, an Indian e-commerce company based in Bengaluru, India.  Meesho focuses on social commerce, allowing individuals to resell products through social media platforms like WhatsApp and Facebook.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "#!pip install langchain langchain-google-genai\n",
-    "\n",
-    "from langchain_google_genai import ChatGoogleGenerativeAI\n",
-    "\n",
-    "llm = ChatGoogleGenerativeAI(\n",
-    "    model=\"gemini-1.5-pro\",\n",
-    "    #google_api_key=\"Your API Key\"\n",
-    ")\n",
-    "message = llm.invoke(\"Who is Bell Eapen\")\n",
-    "print(message.content)"
+    "!pip install langchain langchain-google-genai"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "671a9bb0",
+   "execution_count": null,
+   "id": "2",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Diagnosis: Migraine\n",
-      "Treatment: Rest, fluids, NSAIDs, triptans\n"
-     ]
-    }
-   ],
+   "outputs": [],
+   "source": [
+    "\n",
+    "from langchain_google_genai import ChatGoogleGenerativeAI\n",
+    "\n",
+    "llm = ChatGoogleGenerativeAI(\n",
+    "    model=\"gemini-2.5-flash\",\n",
+    "    # google_api_key=\"Your API Key\"\n",
+    ")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3",
+   "metadata": {},
+   "outputs": [],
    "source": [
     "from langchain_core.prompts import PromptTemplate\n",
     "from langchain_core.output_parsers import StrOutputParser\n",
@@ -61,13 +51,13 @@
     "Treatment: Eye protection, steroids, acyclovir\n",
     "Diagnosis: Meningitis\n",
     "Treatment: IV antibiotics, bed rest\n",
-    "Diagnosis: Multiple Sclerosis\n",
-    "Treatment: {question}\n",
+    "Diagnosis: {question}\n",
+    "Treatment:\n",
     "\"\"\"\n",
     "\n",
     "PROMPT = PromptTemplate.from_template(TEMPLATE)\n",
     "\n",
-    "_input = {\"question\": \"What are Katie's complaints?\"}\n",
+    "_input = {\"question\": \"Multiple Sclerosis\"}\n",
     "\n",
     "chain = PROMPT | llm | StrOutputParser()\n",
     "\n",
