--- a/2_local_llm.ipynb
+++ b/2_local_llm.ipynb
@@ -15,6 +15,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "!pip install langchain langchain-huggingface transformers torch"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "from langchain_huggingface.llms import HuggingFacePipeline\n",
     "from transformers import AutoModelForCausalLM, AutoTokenizer, pipeline\n",
     "from langchain_core.prompts import PromptTemplate\n",
@@ -27,7 +37,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2",
+   "id": "3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,7 +52,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3",
+   "id": "4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,7 +63,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "py311",
+   "display_name": "default",
    "language": "python",
    "name": "python3"
   },
@@ -67,7 +77,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.0"
+   "version": "3.11.11"
   }
  },
  "nbformat": 4,
