Refactor notebooks to update model versions, installation commands, and improve code structure for better readability and functionality

--- a/4_rag.ipynb
+++ b/4_rag.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "6e115b42",
+   "id": "0",
    "metadata": {},
    "source": [
     "# Few shot learning"
@@ -10,59 +10,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "91b1e94c",
+   "execution_count": null,
+   "id": "1",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Bell Eapen is an **Indian entrepreneur and philanthropist** known primarily for founding two successful companies:\n",
-      "\n",
-      "* **Paul Writer:** A marketing services firm specializing in content marketing, demand generation, and sales enablement for B2B technology companies.\n",
-      "* **Magoosh:** An online test preparation company that helps students prepare for standardized tests like the GRE, GMAT, TOEFL, IELTS, and SAT.\n",
-      "\n",
-      "While he co-founded Magoosh, he is more closely associated with Paul Writer, where he remains actively involved. He is recognized for his expertise in B2B marketing and is a frequent speaker at industry events.  He's also involved in philanthropic activities, particularly focused on education.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "#!pip install langchain langchain-google-genai\n",
-    "\n",
-    "from langchain_google_genai import ChatGoogleGenerativeAI\n",
-    "\n",
-    "llm = ChatGoogleGenerativeAI(\n",
-    "    model=\"gemini-1.5-pro\",\n",
-    "    #google_api_key=\"Your API Key\"\n",
-    ")\n",
-    "message = llm.invoke(\"Who is Bell Eapen\")\n",
-    "print(message.content)"
+    "!pip install langchain langchain-google-genai"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "671a9bb0",
+   "execution_count": null,
+   "id": "2",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Katie's complaints include:\n",
-      "\n",
-      "* Depressed mood that is worsening\n",
-      "* Difficulty getting out of the house for social events, even those she's interested in\n",
-      "* Frustration with herself\n",
-      "* Increased sleep issues, including difficulty falling asleep and staying asleep\n",
-      "* Low energy\n",
-      "* Loss of interest in activities\n",
-      "* Feelings of guilt (without a clear source)\n",
-      "* A general desire to feel better\n"
-     ]
-    }
-   ],
+   "outputs": [],
+   "source": [
+    "\n",
+    "from langchain_google_genai import ChatGoogleGenerativeAI\n",
+    "\n",
+    "llm = ChatGoogleGenerativeAI(\n",
+    "    model=\"gemini-2.5-flash\",\n",
+    "    # google_api_key=\"Your API Key\"\n",
+    ")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3",
+   "metadata": {},
+   "outputs": [],
    "source": [
     "from langchain_core.prompts import PromptTemplate\n",
     "from langchain_core.output_parsers import StrOutputParser\n",
