--- a/5_chain.ipynb
+++ b/5_chain.ipynb
@@ -10,18 +10,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!pip install langchain langchain-google-genai"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Import the necessary libraries\n",
-    "from langchain_google_genai import GoogleGenerativeAI\n",
+    "from langchain_google_genai import ChatGoogleGenerativeAI\n",
     "from langchain_core.prompts import PromptTemplate\n",
     "from langchain_core.output_parsers import StrOutputParser\n",
     "from langchain.schema.runnable import RunnablePassthrough, RunnableParallel\n",
-    "\n",
-    "# Initialize the GoogleGenerativeAI model\n",
-    "llm = GoogleGenerativeAI(model=\"models/gemini-1.5-flash-latest\")"
+    "\n"
    ]
   },
   {
@@ -34,12 +41,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Initialize the GoogleGenerativeAI language model with the specified model version\n",
-    "llm = GoogleGenerativeAI(model=\"models/gemini-1.5-flash-latest\")"
+    "llm = ChatGoogleGenerativeAI(\n",
+    "    model=\"gemini-2.5-flash\",\n",
+    "    # google_api_key=\"Your API Key\"\n",
+    ")"
    ]
   },
   {
@@ -52,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -76,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -95,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -120,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -139,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -157,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -178,17 +188,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The case summary describes a male child (age unspecified) who presented with acute onset paralysis and a history of headaches.  The location and extent of the paralysis, as well as the characteristics of the headaches, are unknown.  No medical history, physical examination findings, or investigations are documented.  Therefore, a definitive diagnosis cannot be made.  The differential diagnosis is broad and includes stroke, Guillain-Barré syndrome, transverse myelitis, brain tumor or abscess, multiple sclerosis, infectious causes (encephalitis, meningitis), and myasthenia gravis.  Further information, including a complete medical history, detailed physical examination, and results of investigations (blood tests, CSF analysis, brain imaging, EMG, NCS), is crucial for proper assessment and management.  The outcome and treatment are also currently unknown.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "response = chain.invoke({\"question\": \"Sudden Paralysis in a Boy With Headaches\"})\n",
     "print(response)"
