--- a/6_embeddings.ipynb
+++ b/6_embeddings.ipynb
@@ -9,30 +9,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from langchain_google_genai import GoogleGenerativeAIEmbeddings\n",
-    "embeddings_model = GoogleGenerativeAIEmbeddings(model=\"models/embedding-001\")"
+    "!pip install langchain langchain-google-genai"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(5, 768)"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
+   "source": [
+    "from langchain_google_genai import GoogleGenerativeAIEmbeddings\n",
+    "embeddings_model = GoogleGenerativeAIEmbeddings(\n",
+    "    model=\"models/embedding-001\",\n",
+    "    google_api_key=\"YOUR_GOOGLE_API_KEY\",\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "embeddings = embeddings_model.embed_documents(\n",
     "    [\n",
@@ -57,24 +58,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[0.023227831348776817,\n",
-       " -0.06297047436237335,\n",
-       " -0.023425033316016197,\n",
-       " -0.00353750167414546,\n",
-       " 0.039694882929325104]"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "embedded_query = embeddings_model.embed_query(\"Neurology?\")\n",
     "embedded_query[:5]"
@@ -82,24 +68,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[0.041984859853982925,\n",
-       " -0.06628748029470444,\n",
-       " 0.001272472902201116,\n",
-       " -0.010246035642921925,\n",
-       " 0.0058945296332240105]"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "embedded_query = embeddings_model.embed_query(\"Dermatology?\")\n",
     "embedded_query[:5]"
