--- a/7_retriever.ipynb
+++ b/7_retriever.ipynb
@@ -1,6 +1,15 @@
 {
  "cells": [
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!pip install langchain langchain-google-genai langchain_community xmltodict"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -60,14 +69,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Initialize the GoogleGenerativeAI model and the PubMedRetriever\n",
     "\n",
     "# Initialize the GoogleGenerativeAI model with the specified model name\n",
-    "model = GoogleGenerativeAI(model=\"models/gemini-1.5-flash-latest\")\n",
+    "llm = GoogleGenerativeAI(\n",
+    "    model=\"models/gemini-2.0-flash\",\n",
+    "    google_api_key=\"YOUR_GOOGLE_API_KEY\"\n",
+    ")\n",
     "\n",
     "# Initialize the PubMedRetriever to retrieve documents from PubMed\n",
     "retriever = PubMedRetriever()"
@@ -112,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -136,7 +148,7 @@
     "chain = (\n",
     "    {\"context\": retriever | format_docs, \"question\": RunnablePassthrough()}\n",
     "    | prompt\n",
-    "    | model\n",
+    "    | llm\n",
     "    | StrOutputParser()\n",
     ")\n",
     "\n",
