--- a/8_agent.ipynb
+++ b/8_agent.ipynb
@@ -10,7 +10,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!pip install langchain langchain-google-genai langchain_community"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,9 +30,7 @@
     "from langchain.tools import BaseTool, StructuredTool, tool\n",
     "from langchain_core.prompts import PromptTemplate\n",
     "from langchain import hub\n",
-    "\n",
-    "# Initialize the language model\n",
-    "llm = GoogleGenerativeAI(model=\"models/gemini-1.5-flash-latest\")"
+    "\n"
    ]
   },
   {
@@ -36,14 +43,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Setup Language Model\n",
+    "from langchain_google_genai import ChatGoogleGenerativeAI\n",
     "\n",
-    "# Initialize the GoogleGenerativeAI language model with the specified model\n",
-    "llm = GoogleGenerativeAI(model=\"models/gemini-1.5-flash-latest\")"
+    "# Initialize the GoogleGenerativeAI model with the specified model name\n",
+    "llm = ChatGoogleGenerativeAI(\n",
+    "    model=\"models/gemini-2.0-flash\", google_api_key=\"YOUR_GOOGLE_API_KEY\"\n",
+    ")"
    ]
   },
   {
